--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://thallesrangel.github.io/me",
+  "homepage": "https://thallesrangel.github.io/me",
   "name": "thallesrangel.github.io",
   "version": "0.1.0",
   "private": true,
